only medium site accessible
only medium site accessible and does not tire the web browser

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -22,5 +22,10 @@
         "gecko": {
             "id": "mediumunlimited@itsshivam.com"
         }
-    }
+    },
+    "content_scripts": [
+        "matches":{
+        '*://*.medium.com/*'
+       }    
+    ]
 }
